--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -240,8 +240,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e25b2348-239d-415a-b38a-3acff020051e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "# Run the ImageMagick command to list fonts\n",
+    "# Adjust the command if necessary depending on your ImageMagick installation\n",
+    "process = subprocess.Popen(['convert', '-list', 'font'], stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "stdout, stderr = process.communicate()\n",
+    "\n",
+    "# Decode the output and split into lines\n",
+    "output = stdout.decode('utf-8')\n",
+    "lines = output.split('\\n')\n",
+    "\n",
+    "# Extract and print font names\n",
+    "for line in lines:\n",
+    "    if line.strip().startswith('Font:'):\n",
+    "        font_name = line.split(':')[1].strip()\n",
+    "        print(font_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b3055b68-cb7a-4092-975c-2478b88ed7ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arial\n",
+      "Arial-Black\n",
+      "Arial-Bold\n",
+      "Arial-Bold-Italic\n",
+      "Arial-Italic\n",
+      "Bahnschrift\n",
+      "Calibri\n",
+      "Calibri-Bold\n",
+      "Calibri-Bold-Italic\n",
+      "Calibri-Italic\n",
+      "Calibri-Light\n",
+      "Calibri-Light-Italic\n",
+      "Cambria-&-Cambria-Math\n",
+      "Cambria-Bold\n",
+      "Cambria-Bold-Italic\n",
+      "Cambria-Italic\n",
+      "Candara\n",
+      "Candara-Bold\n",
+      "Candara-Bold-Italic\n",
+      "Candara-Italic\n",
+      "Candara-Light\n",
+      "Candara-Light-Italic\n",
+      "Cascadia-Code-Regular\n",
+      "Cascadia-Mono-Regular\n",
+      "Comic-Sans-MS\n",
+      "Comic-Sans-MS-Bold\n",
+      "Comic-Sans-MS-Bold-Italic\n",
+      "Comic-Sans-MS-Italic\n",
+      "Consolas\n",
+      "Consolas-Bold\n",
+      "Consolas-Bold-Italic\n",
+      "Consolas-Italic\n",
+      "Constantia\n",
+      "Constantia-Bold\n",
+      "Constantia-Bold-Italic\n",
+      "Constantia-Italic\n",
+      "Corbel\n",
+      "Corbel-Bold\n",
+      "Corbel-Bold-Italic\n",
+      "Corbel-Italic\n",
+      "Corbel-Light\n",
+      "Corbel-Light-Italic\n",
+      "Courier-New\n",
+      "Courier-New-Bold\n",
+      "Courier-New-Bold-Italic\n",
+      "Courier-New-Italic\n",
+      "Ebrima\n",
+      "Ebrima-Bold\n",
+      "Franklin-Gothic-Medium\n",
+      "Franklin-Gothic-Medium-Italic\n",
+      "Gabriola\n",
+      "Gadugi\n",
+      "Gadugi-Bold\n",
+      "Georgia\n",
+      "Georgia-Bold\n",
+      "Georgia-Bold-Italic\n",
+      "Georgia-Italic\n",
+      "Holo-MDL2-Assets\n",
+      "Impact\n",
+      "Ink-Free\n",
+      "Javanese-Text\n",
+      "Leelawadee-UI\n",
+      "Leelawadee-UI-Bold\n",
+      "Leelawadee-UI-Semilight\n",
+      "Lucida-Console\n",
+      "Lucida-Sans-Unicode\n",
+      "Malgun-Gothic\n",
+      "Malgun-Gothic-Bold\n",
+      "Malgun-Gothic-SemiLight\n",
+      "Microsoft-Himalaya\n",
+      "Microsoft-JhengHei-&-Microsoft-JhengHei-UI\n",
+      "Microsoft-JhengHei-Bold-&-Microsoft-JhengHei-UI-Bold\n",
+      "Microsoft-JhengHei-Light-&-Microsoft-JhengHei-UI-Light\n",
+      "Microsoft-New-Tai-Lue\n",
+      "Microsoft-New-Tai-Lue-Bold\n",
+      "Microsoft-PhagsPa\n",
+      "Microsoft-PhagsPa-Bold\n",
+      "Microsoft-Sans-Serif\n",
+      "Microsoft-Tai-Le\n",
+      "Microsoft-Tai-Le-Bold\n",
+      "Microsoft-YaHei-&-Microsoft-YaHei-UI\n",
+      "Microsoft-YaHei-Bold-&-Microsoft-YaHei-UI-Bold\n",
+      "Microsoft-YaHei-Light-&-Microsoft-YaHei-UI-Light\n",
+      "Microsoft-Yi-Baiti\n",
+      "MingLiU-ExtB-&-PMingLiU-ExtB-&-MingLiU_HKSCS-ExtB\n",
+      "Mongolian-Baiti\n",
+      "MS-Gothic-&-MS-UI-Gothic-&-MS-PGothic\n",
+      "MV-Boli\n",
+      "Myanmar-Text\n",
+      "Myanmar-Text-Bold\n",
+      "Nirmala-UI\n",
+      "Nirmala-UI-Bold\n",
+      "Nirmala-UI-Semilight\n",
+      "Palatino-Linotype\n",
+      "Palatino-Linotype-Bold\n",
+      "Palatino-Linotype-Bold-Italic\n",
+      "Palatino-Linotype-Italic\n",
+      "Sans-Serif-Collection\n",
+      "Segoe-Fluent-Icons\n",
+      "Segoe-MDL2-Assets\n",
+      "Segoe-Print\n",
+      "Segoe-Print-Bold\n",
+      "Segoe-Script\n",
+      "Segoe-Script-Bold\n",
+      "Segoe-UI\n",
+      "Segoe-UI-Black\n",
+      "Segoe-UI-Black-Italic\n",
+      "Segoe-UI-Bold\n",
+      "Segoe-UI-Bold-Italic\n",
+      "Segoe-UI-Emoji\n",
+      "Segoe-UI-Historic\n",
+      "Segoe-UI-Italic\n",
+      "Segoe-UI-Light\n",
+      "Segoe-UI-Light-Italic\n",
+      "Segoe-UI-Semibold\n",
+      "Segoe-UI-Semibold-Italic\n",
+      "Segoe-UI-Semilight\n",
+      "Segoe-UI-Semilight-Italic\n",
+      "Segoe-UI-Symbol\n",
+      "Segoe-UI-Variable\n",
+      "SimSun-&-NSimSun\n",
+      "SimSun-ExtB\n",
+      "Sitka-Text\n",
+      "Sitka-Text-Italic\n",
+      "Sylfaen\n",
+      "Symbol\n",
+      "Tahoma\n",
+      "Tahoma-Bold\n",
+      "Times-New-Roman\n",
+      "Times-New-Roman-Bold\n",
+      "Times-New-Roman-Bold-Italic\n",
+      "Times-New-Roman-Italic\n",
+      "Trebuchet-MS\n",
+      "Trebuchet-MS-Bold\n",
+      "Trebuchet-MS-Bold-Italic\n",
+      "Trebuchet-MS-Italic\n",
+      "Unispace-Bold\n",
+      "Verdana\n",
+      "Verdana-Bold\n",
+      "Verdana-Bold-Italic\n",
+      "Verdana-Italic\n",
+      "Webdings\n",
+      "Wingdings\n",
+      "Yu-Gothic-Bold-&-Yu-Gothic-UI-Semibold-&-Yu-Gothic-UI-Bold\n",
+      "Yu-Gothic-Light-&-Yu-Gothic-UI-Light\n",
+      "Yu-Gothic-Medium-&-Yu-Gothic-UI-Regular\n",
+      "Yu-Gothic-Regular-&-Yu-Gothic-UI-Semilight\n"
+     ]
+    }
+   ],
+   "source": [
+    "from moviepy.editor import TextClip\n",
+    "dummy_clip = TextClip('Dummy Text')\n",
+    "\n",
+    "# Get the available fonts\n",
+    "available_fonts = dummy_clip.list('font')\n",
+    "\n",
+    "# Print the available fonts\n",
+    "for font in available_fonts:\n",
+    "    print(font)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2b8f52b-f222-4fcc-a3fb-d05aca30d04d",
    "metadata": {},
    "outputs": [],
    "source": []
